# MountScript

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
TextScreens/: startup
_md/: potential_names.md
bash/: create_image.bash  format_image.bash  mount_image.bash  remove_image.bash  set_casefold.bash  unmount_image.bash
src/: cli.py  commands.py  image_cache.py  info_states.py  main.py  paths.py  startup.py  volume_cache.py
src/anneal/: __main__.py  cli.py  commands.py  images.py  models.py  mounts.py  paths.py  prepare.py
src/anneal/bash/: anneal.bash
src/bash/: mountscript.bash
src/foldmount/: __main__.py  cli.py  commands.py  context.py  models.py  mounts.py  paths.py
src/foldmount/bash/: foldmount.bash
